Nav and Footer Changes

--- a/about.html
+++ b/about.html
@@ -14,47 +14,28 @@
   </head>
   <body>
    
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container">
-        <a class="navbar-brand" href="#">
-          <img src="/images/logo.png" alt="Logo" width="188" />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse pl-5 pr-5" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item fw-bold">
-              <a class="nav-link color-change " href="home.html">Home</a>
-            </li>
-            <li class="nav-item fw-bold">
-              <a class="nav-link color-change" href="about.html">About</a>
-            </li>
-            <li class="nav-item fw-bold">
-              <a class="nav-link color-change" href="#">Services</a>
-            </li>
-            <li class="nav-item fw-bold">
-              <a class="nav-link color-change" href="#">Pricing</a>
-            </li>
-            <li class="nav-item fw-bold">
-              <a class="nav-link color-change" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
-
+          <a class="navbar-brand" href="#">
+              <img class="img-fluid" src="images/logo.png" alt="Logo" width="188">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse hover-bg-primarytext-white" id="navbarNav">
+              <ul class="navbar-nav ms-auto">
+                  <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                  <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                  <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+                  <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
+                  <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+              </ul>
+              <a href="#" class="btn btn-primary ms-3">BUY NOW</a>
+          </div>
       </div>
-      <div class="navbar-left">
-        <button type="button" class="btn btn-primary ml-5">BUY NOW</button>
-      </div>
-    </nav>
+  </nav>
 
 
     <!-- ll------------------------------------------------------------------------------------------------------------------------------------------------------------ -->
