slider few changes

--- a/home.html
+++ b/home.html
@@ -37,19 +37,50 @@
     </nav>
 
     <!-- Hero Section -->
-    <div class="content">
-        
+    <div class="hero-slider">
+
+        <div class="image-slider">
+            <!-- Image Slider -->
+            <div class="slider-container">
+                <h1>The best for<br />
+                    the brightest.</h1>
+                <div class="slide" style="background-image: url('images/slider1.jpg')">
+                </div>
+
+                <div class="slide" style="background-image: url('images/slider2.jpg')">
+                </div>
+
+                <div class="slide" style="background-image: url('images/slider3.jpg')">
+                </div>
+
+                <div class="controls-container">
+                    <div class="control"></div>
+                    <div class="control"></div>
+                    <div class="control"></div>
+                </div>
+            </div>
+        </div>
     </div>
 
+    <!-- Content Section -->
+     <!-- <div id="content" style="background-image: url('images/horizontal-bg3.png'); height: 100vh;">
+     </div> -->
+     <div class="mcb-section">
+        <div class="mcb-container">
+            <div class="mcb-column">
+                <img src="images/3image-collage.jpg" alt="">
+            </div>
+        </div>
+     </div>
+
     <!-- Footer Section -->
-    <footer id="Footer" class="bg-light text-center py-2">
+    <footer id="Footer" class="bg-light text-center py-2" style="background-image: url('images/fullblue.png');">
         <div class="container1">
 
             <!-- Logo and Description -->
             <div class=" widgets-wrapper container">
                 <aside class="widgets">
-                    <img src="images/logo.png" height="84"
-                    class="justify-content-center align-items-center">
+                    <img src="images/logo.png" height="84" class="justify-content-center align-items-center">
                     <hr class="no-line" style="margin: 0 auto 20px auto">
                 </aside>
 
