some minor changes navbar and footer

--- a/home.html
+++ b/home.html
@@ -17,21 +17,21 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img class="img-fluid" src="images/logo.png" alt="Logo" width="188">
+                <img class="" src="images/logo.png" alt="Logo" width="188">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse hover-bg-primarytext-white" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            <div class="collapse navbar-collapse hover-bg-primary" id="navbarNav">
+                <ul id="Nav-item" class="navbar-nav ms-auto">
+                    <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/home.html">Home</a></li>
+                    <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/about.html">About</a></li>
+                    <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/service.html">Services</a></li>
+                    <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/pricing.html">Pricing</a></li>
+                    <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/contact.html">Contact</a></li>
                 </ul>
-                <a href="#" class="btn btn-primary ms-3">BUY NOW</a>
+                <a href="#" class=" d-flex buy-button text-decoration-none text-white align-items-center justify-content-center ms-3">BUY NOW</a>
             </div>
         </div>
     </nav>
@@ -43,7 +43,7 @@
             <!-- Image Slider -->
             <div class="slider-container">
                 <h1>The best for<br />
-                    the brightest.</h1>
+                    the brightest.</h1> 
                 <div class="slide" style="background-image: url('images/slider1.jpg')">
                 </div>
 
@@ -63,6 +63,50 @@
     </div>
 
     <!-- Content Section -->
+    <div class="bg-size-contain ">
+        <div class="container mt-5">
+          <div>
+            <p class="fw-bold fs-5 text-center custom-color-1 mt-5 custom-font-1">
+              About Us
+            </p>
+            <br />
+            <p class="text-center fw-bold fs-1 custom-font-1">
+              We know how to build trust & offer<br />
+              the highest quality
+            </p>
+          </div>
+          <div class="row mt-4">
+            <div class="col-md-6 mb-4">
+              <img src="/images/clean-about-icon2.png" alt="Service Icon" class="mb-3" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum
+                beatae nobis veritatis nemo aspernatur itaque sapiente
+                exercitationem at saepe odit temporibus facilis, reiciendis
+                adipisci laboriosam.
+              </p>
+              <p>Lorem ipsum dolor sit</p>
+              <ul class="custom-bullets">
+                <li>Pellentesque sollicitudin nunc</li>
+                <li>Pellentesque sollicitudin nunc</li>
+                <li>Nulla imperdiet sit amet magna</li>
+                <li>Vestibulum dapibus, mauris nec</li>
+              </ul>
+              <button type="button" class="btn btn-primary">
+                <a href="#" class="text-white fw-bold text-decoration-none">SERVICES</a>
+              </button>
+            </div>
+    
+            <div class="col-md-6">
+              <img src="/images/clean-about-icon3.png" alt="About Icon" class="mb-3" />
+              <h4 class="custom-font-1">
+                We have been building our experience<br />effectively since
+              </h4>
+              <p class="fw-bold custom-color-1 custom-font-2 mb-5">1998</p>
+              <img src="/images/ab2.png" alt="Experience" class="w-100" />
+            </div>
+          </div>
+        </div>
+      </div>
      <!-- <div id="content" style="background-image: url('images/horizontal-bg3.png'); height: 100vh;">
      </div> -->
      <div class="mcb-section">
@@ -72,6 +116,14 @@
             </div>
         </div>
      </div>
+
+     <!-- Service and Pricing  -->
+      <div class="service-section">
+        <div class="service-wrap">
+            <h6>Services & pricing</h6>
+            <h2>Dedicated services tailored to your needs</h2>
+        </div>
+      </div>
 
     <!-- Footer Section -->
     <footer id="Footer" class="bg-light text-center py-2" style="background-image: url('images/fullblue.png');">
