--- a/home.html
+++ b/home.html
@@ -9,6 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="service.css">
+    <link rel="stylesheet" href="pricing.css">
+    <link rel="stylesheet" href="contact.css">
+
 </head>
 
 <body>
@@ -26,12 +31,18 @@
             <div class="collapse navbar-collapse hover-bg-primary" id="navbarNav">
                 <ul id="Nav-item" class="navbar-nav ms-auto">
                     <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/home.html">Home</a></li>
-                    <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/about.html">About</a></li>
-                    <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/service.html">Services</a></li>
-                    <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/pricing.html">Pricing</a></li>
-                    <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/contact.html">Contact</a></li>
+                    <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/about.html">About</a>
+                    </li>
+                    <li class="nav-item2"><a class="nav-link text-decoration-none px-4"
+                            href="/service.html">Services</a></li>
+                    <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/pricing.html">Pricing</a>
+                    </li>
+                    <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/contact.html">Contact</a>
+                    </li>
                 </ul>
-                <a href="#" class=" d-flex buy-button text-decoration-none text-white align-items-center justify-content-center ms-3">BUY NOW</a>
+                <a href="#"
+                    class=" d-flex buy-button text-decoration-none text-white align-items-center justify-content-center ms-3">BUY
+                    NOW</a>
             </div>
         </div>
     </nav>
@@ -43,7 +54,7 @@
             <!-- Image Slider -->
             <div class="slider-container">
                 <h1>The best for<br />
-                    the brightest.</h1> 
+                    the brightest.</h1>
                 <div class="slide" style="background-image: url('images/slider1.jpg')">
                 </div>
 
@@ -63,67 +74,210 @@
     </div>
 
     <!-- Content Section -->
+
+    <!-- About us  -->
     <div class="bg-size-contain ">
         <div class="container mt-5">
-          <div>
-            <p class="fw-bold fs-5 text-center custom-color-1 mt-5 custom-font-1">
-              About Us
-            </p>
-            <br />
-            <p class="text-center fw-bold fs-1 custom-font-1">
-              We know how to build trust & offer<br />
-              the highest quality
-            </p>
-          </div>
-          <div class="row mt-4">
-            <div class="col-md-6 mb-4">
-              <img src="/images/clean-about-icon2.png" alt="Service Icon" class="mb-3" />
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum
-                beatae nobis veritatis nemo aspernatur itaque sapiente
-                exercitationem at saepe odit temporibus facilis, reiciendis
-                adipisci laboriosam.
-              </p>
-              <p>Lorem ipsum dolor sit</p>
-              <ul class="custom-bullets">
-                <li>Pellentesque sollicitudin nunc</li>
-                <li>Pellentesque sollicitudin nunc</li>
-                <li>Nulla imperdiet sit amet magna</li>
-                <li>Vestibulum dapibus, mauris nec</li>
-              </ul>
-              <button type="button" class="btn btn-primary">
-                <a href="#" class="text-white fw-bold text-decoration-none">SERVICES</a>
-              </button>
+            <div>
+                <p class="fw-bold fs-5 text-center custom-color-1 mt-5 custom-font-1">
+                    About Us
+                </p>
+                <br />
+                <p class="text-center fw-bold fs-1 custom-font-1">
+                    We know how to build trust & offer<br />
+                    the highest quality
+                </p>
             </div>
-    
-            <div class="col-md-6">
-              <img src="/images/clean-about-icon3.png" alt="About Icon" class="mb-3" />
-              <h4 class="custom-font-1">
-                We have been building our experience<br />effectively since
-              </h4>
-              <p class="fw-bold custom-color-1 custom-font-2 mb-5">1998</p>
-              <img src="/images/ab2.png" alt="Experience" class="w-100" />
+            <div class="row mt-4">
+                <div class="col-md-6">
+                    <img src="/images/clean-about-icon3.png" alt="About Icon" class="mb-3" />
+                    <h4 class="custom-font-1">
+                        We have been building our experience<br />effectively since
+                    </h4>
+                    <p class="fw-bold custom-color-1 custom-font-2 mb-5">1998</p>
+                </div>
+                <div class="d-flex container mt-5" style="flex: 1">
+
+                    <div class="col-md-6 mb-4 pr-2">
+                        <img src="images/BeCleaner 2 – BeTheme/clean-home-icon2.png" alt="Service Icon" class="mb-3" />
+                        <h4 class="custom-font-1">
+                            Security of order<br />fulfilment
+                        </h4>
+                        <p>
+                            Sed ultrices nisl velit, eu ornare est ullamcorper a. Nunc quis nibh magna. Proin risus
+                            erat, fringilla vel purus sit amet, mattis porta enim.
+                        </p>
+                    </div>
+
+                    <div class="col-md-6 mb-4 pr-2">
+                        <img src="images/BeCleaner 2 – BeTheme/clean-home-icon3.png" alt="Service Icon" class="mb-3" />
+                        <h4 class="custom-font-1">
+                            Security of order<br />fulfilment
+                        </h4>
+                        <p>
+                            Sed ultrices nisl velit, eu ornare est ullamcorper a. Nunc quis nibh magna. Proin risus
+                            erat, fringilla vel purus sit amet, mattis porta enim.
+                        </p>
+                    </div>
+                </div>
+
+
             </div>
-          </div>
         </div>
-      </div>
-     <!-- <div id="content" style="background-image: url('images/horizontal-bg3.png'); height: 100vh;">
+    </div>
+    <!-- <div id="content" style="background-image: url('images/horizontal-bg3.png'); height: 100vh;">
      </div> -->
-     <div class="mcb-section">
+    <div class="mcb-section pt-5">
         <div class="mcb-container">
             <div class="mcb-column">
                 <img src="images/3image-collage.jpg" alt="">
             </div>
         </div>
-     </div>
+    </div>
 
-     <!-- Service and Pricing  -->
-      <div class="service-section">
+    <!-- Service and Pricing  -->
+    <div class="service-section">
         <div class="service-wrap">
             <h6>Services & pricing</h6>
             <h2>Dedicated services tailored to your needs</h2>
         </div>
-      </div>
+    </div>
+
+    <div class="bg-size-contain">
+        <div class="container mt-5 ">
+            <div class="row   mt-4">
+
+
+                <div class="col-md-6 mb-4 d-flex flex-column text-left border-end border-2 border-dark">
+
+                    <div class="d-flex align- text-left  mb-3">
+                        <i class="bi bi-star fs-3 text-primary me-2 "> <img src="/namiprice/clean-home-icon-4.png"
+                                alt="Luffy Icon" class="mb-0 icon-size" width="80px"></i>
+                        <h3 class="mt-3 custom-font-3  custom-font-1 fc1">From $149 /mo</h3>
+                        <i class="bi bi-star fs-3 text-primary ms-2"></i>
+                    </div>
+
+                    <p class="fw-bold custom-font-4 text-left custom-font-1 ">For home</p>
+                    <p class="text-muted custom-font-1 "> Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Cum
+                        beatae nobis veritatis nemo aspernatur itaque
+                        sapiente exercitationem at saepe odit temporibus
+                        facilis, reiciendis adipisci laboriosam.</p>
+                    <a href="#"
+                        class=" d-flex buy-button text-decoration-none text-white align-items-center justify-content-center ms-3">BUY
+                        NOW</a>
+
+                </div>
+
+
+                <div class="col-md-6 fs-6 fw-medium d-flex flex-column align-items-end text-end">
+
+                    <div class="d-flex align-items-center justify-content-end mb-3">
+                        <h3 class="mb-0 custom-font-3 custom-font-1 me-2 fc2">From $179 /mo</h3>
+                        <img src="/namiprice/clean-home-icon-5.png" alt="Luffy Icon" class="mb-2 icon-size"
+                            width="80px" />
+                    </div>
+
+                    <p class="fw-bold custom-font-4 custom-font-1">For business</p>
+                    <p class="text-muted custom-font-1 fnt2">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum
+                        beatae nobis veritatis nemo aspernatur itaque sapiente exercitationem at saepe odit temporibus
+                        facilis, reiciendis adipisci laboriosam.
+                    </p>
+                    <a href="#"
+                        class=" d-flex buy-button text-decoration-none text-white align-items-center justify-content-center ms-3">BUY
+                        NOW</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Services and Services blue dark blue  -->
+    <div class="container-fluid py-5 service-service d-flex flex-column align-items-center text-center mt-5">
+        <div class="row mt-4">
+            <!-- Left Section -->
+            <div class="col-lg-6 d-flex flex-column align-items-center justify-content-center text-white text-center position-relative" style="background-color: #44d6fe; height: 380px; width: 530px;  padding: 75px 53px;">
+                <h2 class="services-heading">Services</h2>
+                <p class="services-text">
+                    Fusce ut velit laoreet, tempus arcu eu.<br>
+                    Molestie tortor. Nam vel justo cursus, faucibus.<br>
+                    Maecenas eleifend erat at justo fringilla imperdiet.<br>
+                    Suspendisse vel facilisis odio, at ornare nibh.<br>
+                    Lorem ipsum dolor sit amet.
+                </p>
+                <div class="half-image-left"></div>
+            </div>
+            <!-- Right Section -->
+            <div class="col-lg-6 d-flex flex-column align-items-center justify-content-center text-white text-center position-relative" style="background-color: #2e5aa8; height: 380px; width: 530px;  padding: 75px 53px;">
+                <h2 class="services-heading">Services</h2>
+                <p class="services-text">
+                    Fusce ut velit laoreet, tempus arcu eu.<br>
+                    Molestie tortor. Nam vel justo cursus, faucibus.<br>
+                    Maecenas eleifend erat at justo fringilla imperdiet.<br>
+                    Suspendisse vel facilisis odio, at ornare nibh.<br>
+                    Lorem ipsum dolor sit amet.
+                </p>
+                <div class="half-image-right"></div>
+            </div>
+        </div>
+    </div>
+    
+
+    <!-- Service - Electricity  -->
+    <div class="container mt-5 w-75 p-5">
+        <div class="row align-items-center">
+
+            <div class="col-md-6 text-left text-md-start">
+                <h6 class="custom-color-1 custom-font-1 fw-bold">About us</h6>
+                <h1 class="fw-bold custom-font-1">
+                    In our work,<br>
+                    we also care about <br>
+                    the environment <br>
+                </h1>
+            </div>
+
+            <div class="col-md-6">
+                <div class="row g-3">
+                    <div class="col-md-6 text-center">
+                        <img src="/serviceimg/clean-home-icon-6.png" alt="Placeholder Image"
+                            class="img-fluid rounded mb-2 icon-size" />
+                        <h2 class="fw-bold custom-font-1 ">Electricity</h2>
+                        <p class="custom-font-1">Fusce ut velit laoreet, tempus arcu eu,
+                            molestie tortor. Nam vel justo cursus.</p>
+                        <p class="custom-font-1 custom-font-size fc1">-68%</p>
+                    </div>
+                    <div class="col-md-6 text-center">
+                        <img src="  /serviceimg/clean-home-icon-7.png" alt="Placeholder Image"
+                            class="img-fluid rounded mb-2 icon-size" />
+                        <h2 class="fw-bold">Electricity</h2>
+                        <p>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam
+                            vel justo cursus.</p>
+                        <p class="custom-font-1 custom-font-size fc2">-93%</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- Contact Section  -->
+    <div
+        class="container d-flex flex-column flex-md-row align-items-center justify-content-center bg-white  text-mrgn ">
+        <div class="image-container   ">
+            <img src="https://storage.googleapis.com/a1aa/image/xvojVJsQJ465K5uUOWCCKWAWKnfnIW3M9rKg8PxKeZuoXS9TA.jpg"
+                alt="Aerial view of ocean waves">
+            <img src="https://storage.googleapis.com/a1aa/image/eQ8eSvfRuzUXeSYefuHdD1bwFaEegx7adP1D2Pitxc6CzLpeTA.jpg"
+                alt="Close-up of a green leaf">
+        </div>
+        <div class="bg-light ml-md-4 mt-md-0 rounded-lg  p-5   ">
+            <div class="d-flex align-items-center mb-3">
+                <i class="fas fa-comments text-primary fa-2x"></i>
+                <h2 class="h4 font-weight-bold text-dark ml-2">If you have any question, feel free to call us</h2>
+            </div>
+            <p class="h3 font-weight-bold text-primary mb-2">+91-8010200666</p>
+            <p class="text-muted">Monday - Friday, 9:00 AM - 6:00 PM</p>
+        </div>
+    </div>
 
     <!-- Footer Section -->
     <footer id="Footer" class="bg-light text-center py-2" style="background-image: url('images/fullblue.png');">
