--- a/service.html
+++ b/service.html
@@ -25,7 +25,7 @@
       </button>
       <div class="collapse navbar-collapse hover-bg-primary" id="navbarNav">
         <ul id="Nav-item" class="navbar-nav ms-auto">
-          <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/home.html">Home</a></li>
+          <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/index.html">Home</a></li>
           <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/about.html">About</a></li>
           <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/service.html">Services</a></li>
           <li class="nav-item2"><a class="nav-link text-decoration-none px-4" href="/pricing.html">Pricing</a></li>
